<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flippit</string>
    <string name="label_single_player">Single Player</string>
    <string name="label_multi_player">Multiplayer</string>
    <string name="activity_launcher_title">Flippit</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_howToPlay_title">How to Play</string>
    <string name="action_new_match">New Match</string>
    <string name="action_settings">Settings</string>
    <string name="action_how_to_play">How to Play</string>
    <string name="action_htp_previous">Prev</string>
    <string name="action_htp_next">Next</string>
    <string name="player1_label_default">Player 1</string>
    <string name="player2_label">Computer</string>
    <string name="bad_move">Invalid Move</string>
    <string name="no_moves">No moves for %s</string>
    <string name="winner_p1">You win</string>
    <string name="winner_cpu">CPU wins</string>
    <string name="winner_none">No winner</string>
    <string name="button_start_1p">Single Player</string>
    <string name="button_start_mp">Multiplayer</string>

    <string name="pref_player_name_title">Player Name</string>
    <string name="pref_ai_difficulty">Difficulty</string>
    <string name="pref_ai_difficulty_easy">Easy</string>
    <string name="pref_ai_difficulty_hard">Hard</string>

    <string name="dialog_sign_in_title">Sign In Required</string>
    <string name="dialog_sign_in_message">Google Play sign in is required to use this feature.</string>
    <string name="dialog_sign_in_confirm">Sign In</string>
    <string name="dialog_sign_in_cancel">Cancel</string>

    <string name="pref_play_services_sign_in">Sign In</string>
    <string name="pref_play_services_sign_out">Sign Out</string>
    <string name="pref_play_services_sign_in_summary">Sign in to use features of Google Play Games</string>

    <string name="settings_dialog_sign_in_title">Sign In</string>
    <string name="settings_dialog_sign_in_message">Do you want to sign in?</string>
    <string name="settings_dialog_sign_in_confirm">Sign In</string>
    <string name="settings_dialog_sign_in_cancel">Cancel</string>

    <string name="settings_dialog_sign_out_title">Sign Out</string>
    <string name="settings_dialog_sign_out_message">Do you want to sign out?</string>
    <string name="settings_dialog_sign_out_confirm">Sign Out</string>
    <string name="settings_dialog_sign_out_cancel">Cancel</string>
    <string name="sign_out_confirmation">Signed out from Google Play</string>

    <string name="winner_you">You win</string>
    <string name="winner_light">Light wins</string>
    <string name="winner_dark">Dark wins</string>
    <string name="winner_tie">Tie match</string>

    <string name="how_to_play_p1">
        In Reversi there are two players, each represented by light or dark spaces on the game board.
        The objective is to capture more spaces on the game board than your opponent.
    </string>

    <string name="how_to_play_p2">
        Players take turns claiming spaces with at least one of their opponent\'s pieces in between the claimed space and one of their own spaces.
        After claiming a space, all of the opponent\'s spaces in between the claimed space and one of their own spaces are claimed by the player.
    </string>

    <string name="how_to_play_p3">
        If at any point in the match a player has no valid moves, the turn will be passed back to the other player.
        The match continues until neither player has any valid moves, or all spaces on the game board are claimed.
    </string>

    <string name="how_to_play_p4_header">Strategy</string>
    <string name="how_to_play_p4">
        A good starting strategy for Reversi is to focus on claiming "stable" spaces which are unable to be flanked by your opponent later in the match.
        The four corner spaces are considered to be the most valuable, followed by spaces along the edges.
        Spaces immediately adjacent to the corners and edges should be avoided as these provide an opportunity for your opponent to claim stable spaces.
    </string>

    <string name="multiplayer_new_match">New Match</string>
    <string name="multiplayer_new_match_condensed">New</string>
    <string name="multiplayer_select_match">Select Match</string>
    <string name="multiplayer_select_match_condensed">Select</string>
    <string name="multiplayer_close_match">Close Match</string>
    <string name="multiplayer_forfeit_match">Forfeit Match</string>
    <string name="multiplayer_achievements">Achievements</string>
    <string name="multiplayer_settings">Settings</string>

    <!-- Match status errors -->
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message_default">Error, please try again.</string>
    <string name="dialog_error_tester_untrusted">Untrusted tester</string>
    <string name="dialog_error_already_rematched">Already rematched</string>
    <string name="dialog_error_network_operation_failed">Issue with network connection, please try again.</string>
    <string name="dialog_error_reconnect_required">Issue with Google Play connection, please try again.</string>
    <string name="dialog_error_internal_error">Internal error, please try again.</string>
    <string name="dialog_error_inactive_match">Match is no longer active</string>
    <string name="dialog_error_locally_modified">Match was locally modified</string>
    <string name="dialog_error_confirm">OK</string>

    <!-- Spinner messages -->
    <string name="loading_match">Loading match&#8230;</string>
    <string name="submitting_move">Submitting move&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>

    <!-- Match messages -->
    <string name="match_canceled">Match Canceled</string>
    <string name="match_expired">Match Expired</string>
    <string name="match_finding_partner">Finding opponent&#8230;</string>
    <string name="match_complete">Match Complete</string>
    <string name="match_opponent_turn">Opponent\'s turn&#8230;</string>
    <string name="match_invite_pending">Waiting for invitation, be patient!</string>

    <string name="match_canceled_toast">Match canceled</string>
    <string name="match_removed">Match removed</string>

    <string name="dialog_rematch_title">Match Complete</string>
    <string name="dialog_rematch_message">Care to rematch?</string>
    <string name="dialog_rematch_confirm">Sure!</string>
    <string name="dialog_rematch_cancel">No, thanks</string>

    <string name="dialog_forfeit_match_title">Leave Match</string>
    <string name="dialog_forfeit_match_message">Are you sure you want to forfeit?</string>
    <string name="dialog_forfeit_match_confirm">Yes</string>
    <string name="dialog_forfeit_match_cancel">No</string>

    <string name="dialog_cancel_match_title">Cancel Match</string>
    <string name="dialog_cancel_match_message">Do you want to cancel the match?</string>
    <string name="dialog_cancel_match_confirm">Yes</string>
    <string name="dialog_cancel_match_cancel">No</string>

    <string name="dialog_forfeit_match_forbidden_title">Not Your Turn</string>
    <string name="dialog_forfeit_match_forbidden_message">You must wait until your turn to forfeit the match.</string>
    <string name="dialog_forfeit_match_forbidden_confirm">OK</string>

    <string name="dialog_leave_match_title">Cancel Match</string>
    <string name="dialog_leave_match_message">Do you want to cancel this match?</string>
    <string name="dialog_leave_match_confirm">Yes</string>
    <string name="dialog_leave_match_cancel">No</string>

    <string name="forfeit_success">You have forfeit the match</string>
    <string name="forfeit_fail">Error forfeiting match, please try again</string>
    <string name="no_match_selected">No match selected</string>
    <string name="match_inactive">Inactive match</string>
    <string name="cancel_fail">Error canceling match, please try again</string>
    <string name="player1_icon_content_description">light player</string>
    <string name="signin_other_error">There was an issue signing in, please try again later</string>

    <string name="back_button_description">back</string>
    <string name="settings_button_description">settings</string>
    <string name="how_to_play_button_description">how to play</string>

</resources>
