<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_category">

    <EditTextPreference
        android:key="pref_player_name"
        android:title="@string/pref_player_name_title"
        android:defaultValue="@string/player1_label_default"/>

    <ListPreference
        android:key="pref_ai_difficulty"
        android:title="@string/pref_ai_difficulty"
        android:dialogTitle="@string/pref_ai_difficulty"
        android:entries="@array/pref_ai_difficulty_entries"
        android:entryValues="@array/pref_ai_difficulty_values"
        android:defaultValue="1"
        android:summary="%s"/>

    <Preference
        android:key="pref_play_services_sign_in"
        android:title="@string/pref_play_services_sign_in" />

</PreferenceScreen>
