<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ddiehl.android.reversi.activities.LauncherActivity">

    <TextView
        style="@style/ApplicationTitle"
        android:text="@string/activity_launcher_title"/>

    <Button
        style="@style/CallToActionButton"
        android:id="@+id/button_start_1p"
        android:text="@string/button_start_1p"
        android:onClick="start1p" />

    <Button
        style="@style/CallToActionButton"
        android:id="@+id/button_start_mp"
        android:text="@string/button_start_mp"
        android:onClick="startMultiplayer" />

</LinearLayout>
