<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.ddiehl.android.reversi.launcher.LauncherActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/activity_launcher_title"
        android:textColor="@color/white"
        android:textSize="@dimen/app_title_size"/>

    <Button
        android:id="@+id/button_start_1p"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/imgur_black_light"
        android:text="@string/button_start_1p"
        android:textColor="@color/white_70"
        android:textSize="22sp"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <Button
        android:id="@+id/button_start_mp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/imgur_black_light"
        android:text="@string/button_start_mp"
        android:textColor="@color/white_70"
        android:textSize="22sp"/>

</LinearLayout>
