<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.MultiPlayerMatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                app:theme="@style/MatchToolbar"
                app:titleTextAppearance="@style/MatchToolbarTitle"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/score_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:divider="@drawable/spacer_16dp_v"
                android:orientation="horizontal"
                android:showDividers="middle">

                <ImageView
                    android:id="@+id/icon_p1"
                    style="@style/PlayerIcon"
                    android:background="@drawable/player_icon_p1"
                    android:contentDescription="@string/player1_icon_content_description"/>

                <TextView
                    android:id="@+id/score_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/score_overlay_text_size"
                    tools:text="88"/>

                <ProgressBar
                    android:id="@+id/p1_waiting_bar"
                    android:layout_width="@dimen/player_icon_size"
                    android:layout_height="@dimen/player_icon_size"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:divider="@drawable/spacer_16dp_v"
                android:gravity="end"
                android:orientation="horizontal"
                android:showDividers="middle">

                <ProgressBar
                    android:id="@+id/p2_waiting_bar"
                    android:layout_width="@dimen/player_icon_size"
                    android:layout_height="@dimen/player_icon_size"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/score_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:drawableEnd="@drawable/player_icon_p2"
                    android:drawableRight="@drawable/player_icon_p2"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/score_overlay_text_size"
                    tools:text="88"/>

                <ImageView
                    android:id="@+id/icon_p2"
                    style="@style/PlayerIcon"
                    android:background="@drawable/player_icon_p2"
                    android:contentDescription="@string/player1_icon_content_description"/>

            </LinearLayout>

        </LinearLayout>

        <!--android:background="@color/board_color"-->
        <LinearLayout
            android:id="@+id/game_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/board_panels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:visibility="gone">

                <Button
                    android:id="@+id/board_panel_new_game"
                    style="@style/BoardActionPanel"
                    android:text="@string/multiplayer_new_match"/>

                <Button
                    android:id="@+id/board_panel_select_game"
                    style="@style/BoardActionPanel"
                    android:text="@string/multiplayer_select_match"/>

            </LinearLayout>

            <TableLayout
                android:id="@+id/match_grid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="16"
                android:padding="8dp">

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button
                        style="@style/MatchGridSpace"
                        tools:background="@drawable/board_space_p1"/>

                    <Button
                        style="@style/MatchGridSpace"
                        tools:background="@drawable/board_space_p2"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button
                        style="@style/MatchGridSpace"
                        tools:background="@drawable/board_space_p2"/>

                    <Button
                        style="@style/MatchGridSpace"
                        tools:background="@drawable/board_space_p1"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

                <TableRow style="@style/MatchGridRow">

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                    <Button style="@style/MatchGridSpace"/>

                </TableRow>

            </TableLayout>

            <RelativeLayout
                android:id="@+id/match_message"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:visibility="visible">

                <TextView
                    android:id="@+id/match_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="16dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/game_message_text_size"
                    tools:text="@string/winner_you"/>

                <ImageView
                    android:id="@+id/match_message_icon_1"
                    style="@style/GameMessageIcon"
                    android:layout_toLeftOf="@id/match_message_text"
                    android:layout_toStartOf="@id/match_message_text"
                    android:contentDescription="@null"
                    tools:src="@drawable/player_icon_p1"/>

                <ImageView
                    android:id="@+id/match_message_icon_2"
                    style="@style/GameMessageIcon"
                    android:layout_toEndOf="@id/match_message_text"
                    android:layout_toRightOf="@id/match_message_text"
                    android:contentDescription="@null"
                    tools:src="@drawable/player_icon_p2"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
